UI design and create and edit case changes.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -78,8 +78,8 @@
   "switch":"Switch",
   "references":"References:",
   "references2":"References",
-  "referencesRequired": "Please enter references."
-
-
-
+  "referencesRequired": "Please enter references.",
+  "supplement": "SUPPLEMENT",
+  "supplementRequired": "Please enter supplement.",
+  "publishInTheApp": "PUBLISH IN THE APP"
 }
