UI and image changes and issue fixes.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,10 +49,12 @@
   "answer":"Answer",
   "result":"Diagnosis:",
   "nextStep":"Rationale:",
+  "answerImage": "Answer Image:",
   "delete":"Delete",
   "edit":"Edit",
   "enter":"Enter",
   "attachEcgReport":"Attach ECG Report",
+  "attachImage":"Attach Image",
   "cancel":"Cancel",
   "caseDetailsRequired": "Please enter details.",
   "caseAnswerRequired": "Please enter diagnosis.",
@@ -61,6 +63,7 @@
   "nextStep2":"Rationale",
   "result2":"Diagnosis",
   "skillLevel": "SKILL LEVEl",
+  "CaseCode": "CASE CODE",
   "caseDetails2":"Case Details",
   "noData":"There are no case(s) added yet",
   "caseAdded":"Case added successfully.",
@@ -78,7 +81,7 @@
   "caseNumber":"Case Number",
   "switch":"Switch",
   "references":"References:",
-  "references2":"References",
+  "referencesLink":"Reference Links",
   "referencesRequired": "Please enter references.",
   "supplement": "SUPPLEMENT",
   "supplementRequired": "Please enter supplement.",
