Issue fixes, answer image is not compulsory, skill level css change

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,8 +62,8 @@
   "caseNextRequired": "Please enter rationale.",
   "nextStep2":"Rationale",
   "result2":"Diagnosis",
-  "skillLevel": "SKILL LEVEl",
-  "CaseCode": "CASE CODE",
+  "skillLevel": "SKILL LEVEl: ",
+  "CaseCode": "CASE CODE:",
   "caseDetails2":"Case Details",
   "noData":"There are no case(s) added yet",
   "caseAdded":"Case added successfully.",
