Answer image handling

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -83,7 +83,7 @@
   "references":"References:",
   "referencesLink":"Reference Links",
   "referencesRequired": "Please enter references.",
-  "supplement": "SUPPLEMENT",
+  "supplement": "SUPPLEMENT:",
   "supplementRequired": "Please enter supplement.",
   "publishInTheApp": "PUBLISH IN THE APP"
 }
