validation and images coming soon

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -82,7 +82,7 @@
   "switch":"Switch",
   "references":"References:",
   "referencesLink":"Reference Links",
-  "referencesRequired": "Please enter references.",
+  "referencesRequired": "Please enter reference link.",
   "supplement": "SUPPLEMENT:",
   "supplementRequired": "Please enter supplement.",
   "publishInTheApp": "PUBLISH IN THE APP"
