Client and redminse issues fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -45,7 +45,7 @@
   "cases":"Case(s):",
   "caseDetails":"Case Details:",
   "case":"Case",
-  "ecgReport":"ECG Report:",
+  "ecgReport":"ECG:",
   "answer":"Answer",
   "result":"Diagnosis:",
   "nextStep":"Rationale:",
@@ -53,7 +53,7 @@
   "delete":"Delete",
   "edit":"Edit",
   "enter":"Enter",
-  "attachEcgReport":"Attach ECG Report",
+  "attachEcgReport":"Attach ECG File",
   "attachImage":"Attach Image",
   "cancel":"Cancel",
   "caseDetailsRequired": "Please enter details.",
