--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -85,5 +85,7 @@
   "referencesRequired": "Please enter reference link.",
   "supplement": "SUPPLEMENT:",
   "supplementRequired": "Please enter supplement.",
-  "publishInTheApp": "PUBLISH IN THE APP"
+  "publishInTheApp": "PUBLISH IN THE APP",
+  "removeImage":"Remove Image",
+  "replaceImage":"Replace Image"
 }
